# swagger.yaml
@@ -304,6 +304,7 @@ components:
             - id: 10
               choice: "Kradsen"
               dependent: []
+    
 
 tags:
   - name: case
@@ -510,7 +511,7 @@ paths:
     post:
       summary: Retrieve all cases with pagination, filtering, and sorting
       tags:
-        - case
+        - administration case
       requestBody:
         required: true
         content:
@@ -588,6 +589,223 @@ paths:
                   error:
                     type: string
                     example: Internal server error
+  /create-question:
+    post:
+      summary: Create a new question with choices
+      tags:
+        - administration question
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  description: The title of the question
+                  example: "Hvor mange blev du?"
+                description:
+                  type: string
+                  description: The description of the question
+                  example: "Beskriv hvor bange du blev"
+                type:
+                  type: string
+                  description: The type of the question, e.g., SELECT_ONE or MULTI_SELECT
+                  example: "SELECT_ONE"
+                questionChoices:
+                  type: array
+                  description: A list of choices for the question
+                  items:
+                    type: object
+                    properties:
+                      choice:
+                        type: string
+                        description: The text of the choice
+                        example: "Choice1"
+                      dependent:
+                        type: object
+                        description: Dependent choice if this choice is selected
+                        properties:
+                          choice:
+                            type: string
+                            description: The text of the dependent choice
+                            example: "this is a child choice"
+      responses:
+        201:
+          description: Question created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Question created successfully
+                  question:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        description: The ID of the created question
+                        example: 1
+                      title:
+                        type: string
+                        description: The title of the question
+                        example: "Hvor mange blev du?"
+                      description:
+                        type: string
+                        description: The description of the question
+                        example: "Beskriv hvor bange du blev"
+                      type:
+                        type: string
+                        description: The type of the question
+                        example: "SELECT_ONE"
+                      organizationId:
+                        type: integer
+                        description: The ID of the organization to which the question belongs
+                        example: 2
+                      questionChoices:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              description: The ID of the question choice
+                              example: 1
+                            choice:
+                              type: string
+                              description: The text of the choice
+                              example: "Choice1"
+                            dependent:
+                              type: array
+                              description: Dependent choices
+                              items:
+                                type: object
+                                properties:
+                                  id:
+                                    type: integer
+                                    description: The ID of the dependent question choice
+                                    example: 2
+                                  choice:
+                                    type: string
+                                    description: The text of the dependent choice
+                                    example: "this is a child choice"
+        400:
+          description: Bad request, validation error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "title is required, type is required"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "An unexpected error occurred"
+
+  /approve-case/{caseId}:
+    put:
+      summary: Approve a case
+      tags:
+        - administration case
+      parameters:
+        - name: caseId
+          in: path
+          required: true
+          description: The ID of the case to approve
+          schema:
+            type: integer
+            example: 123
+      responses:
+        200:
+          description: Case approved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Case approved successfully
+                  case:
+                    $ref: "#/components/schemas/CaseResponse"
+        404:
+          description: Case not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Case not found
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: An unexpected error occurred
+
+  /disprove-case/{caseId}:
+    put:
+      summary: Disprove a case
+      tags:
+        - administration case
+      parameters:
+        - name: caseId
+          in: path
+          required: true
+          description: The ID of the case to disprove
+          schema:
+            type: integer
+            example: 123
+      responses:
+        200:
+          description: Case disproved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Case disproved successfully
+                  case:
+                    $ref: "#/components/schemas/CaseResponse"
+        404:
+          description: Case not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Case not found
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: An unexpected error occurred
 
 security:
   - bearerAuth: []
